src/test/resources/tokens/invalid/integer_out_of_bounds_negative_binary.unpick
unpick v3
group int
    -0b10000000000000000000000000000001